--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "eslint-config-next": "^14.2.4",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-id-swiper": "^4.0.0",
     "swiper": "^11.1.4"
   }
 }
